objects/Company_Asset__c.object
<CustomObject>
    <description>For tracking company assets, like computers, headsets etc..</description>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <inlineHelpText>The individual to whom the asset is assignd</inlineHelpText>
        <label>Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <inlineHelpText>The product&apos;s unique serial number if available.</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Headset</fullName>
                </value>
                <value>
                    <fullName>Mouse</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Model__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Person__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Available_Assets</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Model__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Person__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Available Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Use_Assets</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Model__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Person__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Use</value>
        </filters>
        <label>In Use Assets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Company Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>